bottom Navigation bar icon names

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -52,5 +52,6 @@
     <dimen name="sp_90">90sp</dimen>
     <dimen name="sp_95">95sp</dimen>
     <dimen name="sp_100">100sp</dimen>
+    <dimen name="dp_12">12dp</dimen>
 
 </resources>
