--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,32 +3,87 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <FrameLayout
+        android:id="@+id/Container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/Container"
-        android:layout_above="@id/bottomNav"
-        />
+        android:layout_above="@id/bottomNav" />
 
-<com.etebarian.meowbottomnavigation.MeowBottomNavigation
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/bottomNav"
-    app:mbn_circleColor="@color/white"
-    app:mbn_selectedIconColor="@color/black"
-    android:layout_alignParentBottom="true"
-    app:mbn_countTextColor="@color/white"
-    app:mbn_countBackgroundColor="#EDECE4"
-    app:mbn_defaultIconColor="#070707"
-    app:mbn_backgroundBottomColor="@color/white"
-    />
+    <com.etebarian.meowbottomnavigation.MeowBottomNavigation
+        android:id="@+id/bottomNav"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/dp_12"
+        app:mbn_backgroundBottomColor="@color/white"
+        app:mbn_circleColor="@color/white"
+        app:mbn_countBackgroundColor="#EDECE4"
+        app:mbn_countTextColor="@color/white"
+        app:mbn_defaultIconColor="#070707"
+        android:layout_alignParentBottom="true"
+        android:layout_above="@id/tablayoutname"
+        app:mbn_selectedIconColor="@color/black"
+        tools:ignore="NotSibling" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/tablayoutname"
 
+        android:layout_alignParentBottom="true"
 
+        >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="HOME"
+            android:textAlignment="center"
+            android:layout_marginStart="5dp"
+            android:textColor="#070707"
+            android:textSize="12sp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="CHATS"
+            android:textAlignment="center"
+            android:layout_marginStart="5dp"
+            android:textColor="#070707"
+            android:textSize="12sp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="SELL"
+            android:textAlignment="viewEnd"
+            android:layout_marginLeft="@dimen/dp_10"
+            android:textColor="#070707"
+            android:textSize="12sp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="MY ADS"
+            android:textAlignment="viewEnd"
+            android:layout_marginStart="5dp"
+            android:textColor="#070707"
+            android:textSize="12sp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="ACCOUNT"
+            android:layout_marginStart="5dp"
+            android:textAlignment="viewEnd"
+            android:textColor="#070707"
+            android:textSize="12sp" />
+
+    </LinearLayout>
 
 
 </RelativeLayout>
