--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -34,7 +34,7 @@
         android:background="@drawable/bg_rect"
         android:drawableStart="@drawable/ic_search"
         android:drawablePadding="@dimen/dp_2"
-        android:hint="Find Cars, Mobiles, Phones and more.."
+        android:hint="Find Cars, Mobiles, Phones.."
         android:padding="@dimen/dp_10"
         app:layout_constraintTop_toBottomOf="@+id/ivLocation_HomeFragment" />
 
@@ -48,19 +48,42 @@
         app:layout_constraintStart_toEndOf="@id/etSearchView_HomeFragment"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/tvBrowseCategories"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/dp_20"
+        app:layout_constraintTop_toBottomOf="@id/etSearchView_HomeFragment"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="@dimen/sp_20"
+        android:text="Browse Categories"
+        android:textColor="@color/black"
+        android:textSize="@dimen/sp_20" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/horizontalRecyclerView_HomeFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_20"
-        app:layout_constraintTop_toBottomOf="@id/etSearchView_HomeFragment" />
+        app:layout_constraintTop_toBottomOf="@id/tvBrowseCategories" />
+
+    <TextView
+        android:id="@+id/tvFreshRecommendation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/dp_20"
+        android:text="Fresh recommendation"
+        app:layout_constraintTop_toBottomOf="@id/horizontalRecyclerView_HomeFragment"
+        app:layout_constraintStart_toStartOf="parent"
+        android:textColor="@color/black"
+        android:textSize="@dimen/sp_20" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/verticalRecyclerView_HomeFragment"
         android:layout_width="match_parent"
         android:layout_height="450dp"
         android:layout_marginTop="@dimen/dp_20"
-        app:layout_constraintTop_toBottomOf="@id/horizontalRecyclerView_HomeFragment" />
+        app:layout_constraintTop_toBottomOf="@id/tvFreshRecommendation" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
