--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,6 +10,7 @@
         android:id="@+id/ivLocation_HomeFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/dp_5"
         android:src="@drawable/ic_location_on"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -18,6 +19,8 @@
         android:id="@+id/tvLocation_HomeFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/dp_5"
+        android:textSize="@dimen/sp_15"
         android:layout_marginStart="@dimen/dp_10"
         android:text="bangalore_india"
         android:textColor="@color/black"
@@ -58,13 +61,13 @@
         android:layout_marginTop="@dimen/sp_20"
         android:text="Browse Categories"
         android:textColor="@color/black"
-        android:textSize="@dimen/sp_20" />
+        android:textSize="@dimen/sp_15" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/horizontalRecyclerView_HomeFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_20"
+        android:layout_marginTop="@dimen/dp_10"
         app:layout_constraintTop_toBottomOf="@id/tvBrowseCategories" />
 
     <TextView
@@ -76,7 +79,7 @@
         app:layout_constraintTop_toBottomOf="@id/horizontalRecyclerView_HomeFragment"
         app:layout_constraintStart_toStartOf="parent"
         android:textColor="@color/black"
-        android:textSize="@dimen/sp_20" />
+        android:textSize="@dimen/sp_15" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/verticalRecyclerView_HomeFragment"
