--- a/app/src/main/res/layout/item_layout_horizental_rv_homefragment.xml
+++ b/app/src/main/res/layout/item_layout_horizental_rv_homefragment.xml
@@ -1,24 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="@dimen/dp_100"
     android:id="@+id/horizontalCArd"
+    android:padding="@dimen/dp_5"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/ivProductImage_horizental_rv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:layout_marginStart="@dimen/dp_80"
+        android:layout_width="@dimen/dp_80"
+        android:layout_gravity="center"
+        android:padding="@dimen/dp_15"
+        android:layout_height="@dimen/dp_80"
         android:layout_marginTop="@dimen/dp_10" />
 
     <TextView
         android:id="@+id/tvProductName_horizental_rv"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/dp_80"
         android:layout_marginTop="@dimen/dp_10"
+        android:text="mintu"
+        android:textAlignment="center"
         android:textColor="@color/black" />
 
 
