My ads View Pager And Show Product View Pager

--- a/app/src/main/res/layout/fragment_myads.xml
+++ b/app/src/main/res/layout/fragment_myads.xml
@@ -5,9 +5,15 @@
     android:layout_height="match_parent"
     tools:context=".Fragments.MyadsFragment">
 
-<androidx.recyclerview.widget.RecyclerView
-    android:layout_width="match_parent"
-    android:id="@+id/myAdsRecycler"
-    android:layout_height="match_parent"/>
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/ViewPageerr"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+
+        />
 </RelativeLayout>
