--- a/app/src/main/res/layout/item_layout_myads.xml
+++ b/app/src/main/res/layout/item_layout_myads.xml
@@ -11,23 +11,23 @@
 
 
     <RelativeLayout
-        android:id="@+id/llcard"
+        android:id="@+id/myadsllcard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/tvimage"
+            android:id="@+id/myadstvimage"
             android:layout_width="@dimen/dp_150"
             android:layout_height="@dimen/dp_150"
             android:layout_margin="10dp"
             />
 
         <TextView
-            android:id="@+id/tvsign"
+            android:id="@+id/myadstvsign"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/tvimage"
+            android:layout_toRightOf="@id/myadstvimage"
             android:paddingStart="10dp"
             android:text="₹"
             android:paddingTop="@dimen/dp_12"
@@ -37,12 +37,12 @@
             android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/tvprice"
+            android:id="@+id/myadstvprice"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/tvimage"
+            android:layout_toRightOf="@id/myadstvimage"
             android:padding="12dp"
-            android:layout_toEndOf="@id/tvsign"
+            android:layout_toEndOf="@id/myadstvsign"
             android:paddingStart="10dp"
             android:text="₹"
             android:textStyle="bold"
@@ -51,22 +51,22 @@
 
         <ImageButton
             android:layout_width="wrap_content"
-            android:id="@+id/tvheart"
+            android:id="@+id/myadstvheart"
             android:background="@color/white"
             android:layout_marginLeft="@dimen/dp_20"
-            android:src="@drawable/ic_heart_like_love_icon"
+            android:src="@drawable/ic_heartfilled"
             android:layout_alignParentEnd="true"
             android:layout_margin="@dimen/dp_10"
             android:layout_height="wrap_content"/>
 
         <TextView
-            android:id="@+id/tvPlace"
+            android:id="@+id/myadstvPlace"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/tvProductName"
+            android:layout_below="@id/myadstvProductName"
             android:layout_marginTop="@dimen/dp_40"
             android:layout_marginStart="@dimen/dp_10"
-            android:layout_toRightOf="@id/tvimage"
+            android:layout_toRightOf="@id/myadstvimage"
             android:padding="12dp"
 
             android:drawablePadding="@dimen/dp_5"
@@ -77,11 +77,11 @@
 
 
         <TextView
-            android:id="@+id/tvProductName"
+            android:id="@+id/myadstvProductName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/tvprice"
-            android:layout_toRightOf="@id/tvimage"
+            android:layout_below="@id/myadstvprice"
+            android:layout_toRightOf="@id/myadstvimage"
             android:padding="12dp"
             android:textAllCaps="true"
             android:layout_marginStart="@dimen/dp_10"
