--- a/app/src/main/res/layout/fragment_s_e_l_l_i_n_g.xml
+++ b/app/src/main/res/layout/fragment_s_e_l_l_i_n_g.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ShowProductDetail.pic3Fragment">
+    tools:context=".Chat_Section.SELLINGFragment">
 
-    <ImageView
+    <!-- TODO: Update blank fragment layout -->
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/shine4"
-        android:contentDescription="TODO" />
+        android:text="@string/hello_blank_fragment" />
 
-</RelativeLayout>
+</FrameLayout>
