--- a/app/src/main/res/layout/item_layout_vertical_rv_homefragment.xml
+++ b/app/src/main/res/layout/item_layout_vertical_rv_homefragment.xml
@@ -19,14 +19,15 @@
 
             <ImageView
                 android:id="@+id/ivProductImage_vertical_rv"
-                android:layout_width="@dimen/dp_100"
-                android:layout_height="150dp" />
+                android:layout_width="wrap_content"
+                android:scaleType="centerCrop"
+                android:layout_height="@dimen/dp_150" />
 
             <ImageButton
                 android:id="@+id/btnMyAdds_verticle_rv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/dp_50"
+                android:layout_alignParentEnd="true"
                 android:src="@drawable/ic_heart_like_love_icon" />
 
             <TextView
@@ -50,6 +51,7 @@
                 android:id="@+id/tvLocation_vertical_rv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_20"
                 android:layout_below="@id/tvPrice_vertical_rv"
                 android:drawableStart="@drawable/ic_location_on"
                 android:drawablePadding="@dimen/dp_2"
