--- a/app/src/main/res/drawable/bg_rect.xml
+++ b/app/src/main/res/drawable/bg_rect.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/white" />
-    <stroke android:color="@android:color/black"
+    <stroke android:color="#6D595454"
         android:width="@dimen/dp_1" />
     <corners android:radius="@dimen/dp_5" />
 
