--- a/app/src/main/res/layout/fragment_second2.xml
+++ b/app/src/main/res/layout/fragment_second2.xml
@@ -8,7 +8,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/shine3"
+        android:background="@drawable/one1"
         android:contentDescription="TODO" />
 
 </RelativeLayout>
