--- a/app/src/main/res/drawable/ic_mobile.xml
+++ b/app/src/main/res/drawable/ic_mobile.xml
@@ -1,30 +1,15 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="350dp"
-    android:height="350dp"
-    android:viewportWidth="350"
-    android:viewportHeight="350">
-  <path
-      android:pathData="M245.895,340.434L100.293,340.434c-7.267,0 -13.156,-5.889 -13.156,-13.156L87.137,18.96c0,-7.267 5.889,-13.156 13.156,-13.156l145.599,0c7.267,0 13.156,5.889 13.156,13.156l0,308.314C259.051,334.541 253.162,340.434 245.895,340.434z"
-      android:strokeLineJoin="miter"
-      android:strokeWidth="1"
-      android:fillColor="#98C0E5"
-      android:fillType="nonZero"
-      android:strokeColor="#00000000"
-      android:strokeLineCap="butt"/>
-  <path
-      android:pathData="M141.48,7.392l62.94,0l0,12.215l-62.94,0z"
-      android:strokeLineJoin="miter"
-      android:strokeWidth="1"
-      android:fillColor="#ECF0F1"
-      android:fillType="nonZero"
-      android:strokeColor="#00000000"
-      android:strokeLineCap="butt"/>
-  <path
-      android:pathData="M243.371,-1.944L102.84,-1.944c-10.954,0 -19.831,8.881 -19.831,19.831l0,310.434c0,10.954 8.881,19.831 19.831,19.831l140.53,0c10.954,0 19.831,-8.881 19.831,-19.831L263.202,17.887C263.202,6.936 254.325,-1.944 243.371,-1.944zM251.532,328.324c0,4.501 -3.66,8.161 -8.161,8.161L102.84,336.486c-4.501,0 -8.161,-3.66 -8.161,-8.161L94.679,17.887C94.679,13.386 98.34,9.726 102.84,9.726l20.699,0c1.474,9.122 7.982,16.05 15.731,16.05l67.67,0c7.749,0 14.253,-6.928 15.731,-16.05l20.699,0c4.501,0 8.161,3.66 8.161,8.161L251.532,328.324zM198.795,13.616c0,1.494 -1.214,2.707 -2.707,2.707S193.38,15.109 193.38,13.616s1.214,-2.707 2.707,-2.707S198.795,12.122 198.795,13.616zM186.184,13.616c0,1.074 -0.871,1.945 -1.945,1.945l-36.823,0c-1.074,0 -1.945,-0.871 -1.945,-1.945s0.871,-1.945 1.945,-1.945l36.823,0C185.316,11.671 186.184,12.542 186.184,13.616z"
-      android:strokeLineJoin="miter"
-      android:strokeWidth="1"
-      android:fillColor="#314458"
-      android:fillType="nonZero"
-      android:strokeColor="#00000000"
-      android:strokeLineCap="butt"/>
+<vector android:height="64dp" android:viewportHeight="350"
+    android:viewportWidth="350" android:width="64dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#98C0E5" android:fillType="nonZero"
+        android:pathData="M245.895,340.434L100.293,340.434c-7.267,0 -13.156,-5.889 -13.156,-13.156L87.137,18.96c0,-7.267 5.889,-13.156 13.156,-13.156l145.599,0c7.267,0 13.156,5.889 13.156,13.156l0,308.314C259.051,334.541 253.162,340.434 245.895,340.434z"
+        android:strokeColor="#00000000" android:strokeLineCap="butt"
+        android:strokeLineJoin="miter" android:strokeWidth="1"/>
+    <path android:fillColor="#ECF0F1" android:fillType="nonZero"
+        android:pathData="M141.48,7.392l62.94,0l0,12.215l-62.94,0z"
+        android:strokeColor="#00000000" android:strokeLineCap="butt"
+        android:strokeLineJoin="miter" android:strokeWidth="1"/>
+    <path android:fillColor="#314458" android:fillType="nonZero"
+        android:pathData="M243.371,-1.944L102.84,-1.944c-10.954,0 -19.831,8.881 -19.831,19.831l0,310.434c0,10.954 8.881,19.831 19.831,19.831l140.53,0c10.954,0 19.831,-8.881 19.831,-19.831L263.202,17.887C263.202,6.936 254.325,-1.944 243.371,-1.944zM251.532,328.324c0,4.501 -3.66,8.161 -8.161,8.161L102.84,336.486c-4.501,0 -8.161,-3.66 -8.161,-8.161L94.679,17.887C94.679,13.386 98.34,9.726 102.84,9.726l20.699,0c1.474,9.122 7.982,16.05 15.731,16.05l67.67,0c7.749,0 14.253,-6.928 15.731,-16.05l20.699,0c4.501,0 8.161,3.66 8.161,8.161L251.532,328.324zM198.795,13.616c0,1.494 -1.214,2.707 -2.707,2.707S193.38,15.109 193.38,13.616s1.214,-2.707 2.707,-2.707S198.795,12.122 198.795,13.616zM186.184,13.616c0,1.074 -0.871,1.945 -1.945,1.945l-36.823,0c-1.074,0 -1.945,-0.871 -1.945,-1.945s0.871,-1.945 1.945,-1.945l36.823,0C185.316,11.671 186.184,12.542 186.184,13.616z"
+        android:strokeColor="#00000000" android:strokeLineCap="butt"
+        android:strokeLineJoin="miter" android:strokeWidth="1"/>
 </vector>
