--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -82,9 +82,10 @@
         android:textSize="@dimen/sp_15" />
 
     <androidx.recyclerview.widget.RecyclerView
+        app:layout_constraintStart_toEndOf="@id/tvFreshRecommendation"
         android:id="@+id/verticalRecyclerView_HomeFragment"
         android:layout_width="match_parent"
-        android:layout_height="450dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_20"
         app:layout_constraintTop_toBottomOf="@id/tvFreshRecommendation" />
 
