--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -1,16 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MyAdsSection.FirstFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+
+    <ImageView
+        android:id="@+id/Imageads"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:background="@drawable/myads" />
+
+    <TextView
+        android:id="@+id/youHavent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/Imageads"
+        android:padding="@dimen/dp_10"
+        android:paddingHorizontal="@dimen/dp_20"
+        android:text="You haven't listed anything yet"
+        android:textAlignment="center"
+        android:textColor="@color/olx"
+        android:textSize="@dimen/sp_15"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/HeaderBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/youHavent"
+        android:padding="@dimen/dp_10"
+        android:paddingHorizontal="@dimen/dp_20"
+        android:text="Let  go of what you don't use anymore"
+        android:textAlignment="center"
+        android:textColor="#2F6F74"
+        android:textSize="@dimen/sp_10"
+        android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/Posts"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/HeaderBar"
+        android:layout_marginHorizontal="100dp"
+        android:background="@drawable/bg_circular_rect"
+        android:backgroundTint="@color/olx"
+        android:text="Post"
+        android:layout_marginVertical="@dimen/dp_10"
+        android:textColor="@color/white"
+        tools:ignore="ButtonStyle" />
+
+
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textSize="@dimen/dp_12"
-        android:textColor="@color/black"
-        android:text="  First fragmenyt" />
+        android:layout_height="wrap_content"
+        android:layout_below="@id/Posts"
+        android:background="@drawable/bg_circular_rect"
+        android:backgroundTint="#256CD0"
+        android:padding="@dimen/dp_15"
+        android:layout_marginVertical="@dimen/dp_10"
+        android:paddingStart="@dimen/sp_10"
+        android:paddingHorizontal="@dimen/dp_20"
+        android:layout_marginHorizontal="@dimen/dp_10"
+        android:text="Heavy discount on\n
+Packages"
+        android:textColor="@color/white"
+        android:textSize="@dimen/sp_15"
+        android:textStyle="bold" />
 
-</FrameLayout>
+</RelativeLayout>
