--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,35 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:id="@+id/home"
-        android:icon="@drawable/ic_baseline_home_24"
-        android:title="HOME" />
-
-    <item
-        android:id="@+id/chats"
-        android:icon="@drawable/ic_baseline_chat_bubble_outline_24"
-        android:title="CHATS" />
-    <item
-        android:id="@+id/sell"
-        android:icon="@drawable/ic_baseline_home_24"
-        android:title="SELL" />
-    <item
-        android:id="@+id/myads"
-        android:icon="@drawable/ic_baseline_home_24"
-        android:title="MY ADS" />
-    <item
-        android:id="@+id/account"
-        android:icon="@drawable/ic_baseline_account_circle_24"
-        android:title="ACCOUNT" />
-
-
-
-
-
-
-
-
-
-
-
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item android:id="@+id/svSearchView"
+        android:icon="@drawable/ic_baseline_search_24"
+        app:showAsAction="always"
+        app:actionViewClass="androidx.appcompat.widget.SearchView" />
 </menu>
